--- a/Project.ini
+++ b/Project.ini
@@ -1,14 +1,14 @@
 ﻿CodePage=1251
 SysKind=1
-Version=1665220512.3
-ID="{2B826AC3-21A2-4526-9C45-96574F712962}"
+Version=1666710823.6
+ID="{B67E9408-81B3-4485-88EE-98965605CB95}"
 Package={AC9F2F90-E877-11CE-9F68-00AA00574A4F}
 Name="TemplateProject"
 HelpContextID="0"
 VersionCompatible32="393222000"
-CMG="D5D7460CCA76CE76CE76CE76CE"
-DPB="3B39A8AA0FAB0FAB0F"
-GC="A1A33237333733C8"
+CMG="1614D3D5D3EDDBF1DBF1DBF1DBF1"
+DPB="2220E7E9F2EAF2EAF2"
+GC="2E2CEBFDFB0506060606F9"
 
 [Host Extender Info]
 &H00000001={3832D640-CF90-11CF-8E43-00A0C911005A};VBE;&H00000000
@@ -16,21 +16,21 @@ GC="A1A33237333733C8"
 [Constants]
 
 [Reference stdole]
-LibId=*\G{00020430-0000-0000-C000-000000000046}#2.0#0#C:\WINDOWS\system32\stdole2.tlb#OLE Automation
+LibId=*\G{00020430-0000-0000-C000-000000000046}#2.0#0#C:\Windows\SysWOW64\stdole2.tlb#OLE Automation
 
 [Reference Office]
-LibId=*\G{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}#2.0#0#C:\Program Files\Common Files\Microsoft Shared\OFFICE11\MSO.DLL#Microsoft Office 11.0 Object Library
+LibId=*\G{2DF8D04C-5BFA-101B-BDE5-00AA0044DE52}#2.0#0#C:\Program Files (x86)\Common Files\Microsoft Shared\OFFICE14\MSO.DLL#Microsoft Office 11.0 Object Library
 
 [Reference MSForms]
 LibIdTwiddled=*\G{00000000-0000-0000-0000-000000000000}#0.0#0##
-LibIdExtended=*\G{A847478D-A733-41DC-AFCB-892671498454}#2.0#0#C:\Temp\VBE\MSForms.exd#Microsoft Forms 2.0 Object Library
+LibIdExtended=*\G{8B7D67D7-8A18-4AD0-A54A-FB1C50214C3B}#2.0#0#C:\Users\Antis\AppData\Local\Temp\VBE\MSForms.exd#Microsoft Forms 2.0 Object Library
 NameRecordExtended=MSForms
-OriginalLibId=*\G{0D452EE1-E08F-101A-852E-02608C4D0BB4}#2.0#0#C:\WINDOWS\system32\FM20.DLL#Microsoft Forms 2.0 Object Library
+OriginalLibId=*\G{0D452EE1-E08F-101A-852E-02608C4D0BB4}#2.0#0#C:\Windows\SysWOW64\FM20.DLL#Microsoft Forms 2.0 Object Library
 OriginalTypeLib={0d452ee1-e08f-101a-852e-02608c4d0bb4}
 Cookie=1
 
 [Reference MSXML2]
-LibId=*\G{F5078F18-C551-11D3-89B9-0000F81FE221}#3.0#0#C:\WINDOWS\system32\msxml3.dll#Microsoft XML, v3.0
+LibId=*\G{F5078F18-C551-11D3-89B9-0000F81FE221}#3.0#0#C:\Windows\SysWOW64\msxml3.dll#Microsoft XML, v3.0
 
 [Reference Normal]
 LibIdAbsolute=*\CNormal
